update contact styles and icon component structure

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,11 @@
 </head>
 <body>
   <app-root></app-root>
+  
+  <!-- SVG Sprites availables in DOM -->
+  <div style="width:0;height:0;position:absolute;overflow:hidden;">
+    <object type="image/svg+xml" data="icons/sprite-media.svg" id="sprite-media-svg"></object>
+    <object type="image/svg+xml" data="icons/sprite.svg" id="sprite-svg"></object>
+  </div>
 </body>
 </html>
