update index.html and my approach component

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <div style="width:0;height:0;position:absolute;overflow:hidden;">
     <object type="image/svg+xml" data="icons/sprite-media.svg" id="sprite-media-svg"></object>
     <object type="image/svg+xml" data="icons/sprite.svg" id="sprite-svg"></object>
+    <object type="image/svg+xml" data="icons/approach-sprite.svg" id="approach-sprite-svg"></object>
   </div>
 </body>
 </html>
